--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ loader_version=0.16.13
 
 # Mod Properties
 mod_version=0.1.0
-maven_group=com.bstar.addon
+maven_group=com.bstar.duper
 archives_base_name=meteor-auto-duper
 
 # Dependencies
