--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -1,23 +1,39 @@
-name: Publish Development Build
-on: push
+name: Java CI with Gradle
+
+on: [ push, pull_request ]
+
+concurrency:
+  group: "latest"
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          java-version: 17
-          distribution: adopt
+          java-version: '21'
+          distribution: 'zulu'
+          java-package: 'jdk'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Build
         run: ./gradlew build
-      - name: Release
-        uses: marvinpinto/action-automatic-releases@latest
+
+      - name: Remove *-sources.jar
+        run: rm ./build/libs/*-sources.jar || true
+
+      - uses: "0xDylan/action-auto-releases-n20@v1.1"
         with:
-          repo_token: '${{ secrets.GITHUB_TOKEN }}'
-          automatic_release_tag: latest
-          prerelease: true
-          title: Dev Build
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: false
+          title: "Latest Build (1.21.4)"
           files: |
             ./build/libs/*.jar
